# TerminalCraft

./: .gitignore  main.py  pyproject.toml  run.py
app/: __init__.py  app.py
controllers/: __init__.py  book_controller.py  library_controller.py  my_controller.py
events/: __init__.py  events.py
models/: __init__.py  book.py  book_model.py  db.py  my_model.py
static/: style.css
utils/: __init__.py  my_utils.py
views/: __init__.py  book_detail_view.py  book_list_view.py  book_view.py  library_view.py  my_view.py
widgets/: __init__.py  db.py  widgets.py
