[tool.poetry]
name = "terminalcraft"
version = "0.1.0"
description = ""
authors = ["Luciano Filho <lvgalvaofilho@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
textual = {version = "^0.28.0", extras = ["dev"]}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
